# ray-tracer

./: .gitignore  CMakeLists.txt  README.md
example-artifact/: artifact.ray
src/: .RayTracer.h.swp  CMakeLists.txt  RayTracer.cpp  RayTracer.h  main.cpp
src/SceneObjects/: .trimesh.cpp.swp  Box.cpp  Cone.cpp  Cylinder.cpp  Sphere.cpp  Sphere.h  Square.cpp  trimesh.cpp  trimesh.h
src/fileio/: bitmap.cpp  bitmap.h  buffer.cpp  pngimage.cpp  pngimage.h
src/parser/: Parser.cpp  Parser.h
src/scene/: .scene.cpp.un~  bbox.h  camera.cpp  cubeMap.cpp  cubeMap.h  light.cpp  material.cpp  material.h  ray.h  scene.cpp  scene.h
src/ui/: CommandLineUI.cpp  CubeMapChooser.cxx  CubeMapChooser.h  GraphicalUI.cpp  ModelerCamera.cpp  TraceGLWindow.cpp  TraceUI.h  debuggingView.cpp  glObjects.cpp
src/win32/: getopt.cpp
