SET(pwd ${CMAKE_CURRENT_LIST_DIR})

AUX_SOURCE_DIRECTORY(${pwd} src0)
AUX_SOURCE_DIRECTORY(${pwd}/fileio src1)
AUX_SOURCE_DIRECTORY(${pwd}/parser src2)
AUX_SOURCE_DIRECTORY(${pwd}/scene src3)
AUX_SOURCE_DIRECTORY(${pwd}/SceneObjects src4)
AUX_SOURCE_DIRECTORY(${pwd}/ui src5)
add_executable(ray ${src0} ${src1} ${src2} ${src3} ${src4} ${src5})
IF (WIN32)
	AUX_SOURCE_DIRECTORY(${pwd}/win32 winsrc)
	ADD_EXECUTABLE(ray ${winsrc})
ENDIF(WIN32)

message(STATUS "ray added")

target_link_libraries(ray ${OPENGL_gl_LIBRARY})
SET(FLTK_SKIP_FLUID TRUE)
FIND_PACKAGE(FLTK REQUIRED)
SET_PROPERTY(TARGET ray PROPERTY INCLUDE_DIRECTORIES ${FLTK_INCLUDE_DIR})
target_link_libraries(ray ${FLTK_LIBRARIES})
FIND_PACKAGE(JPEG REQUIRED)
target_link_libraries(ray ${JPEG_LIBRARIES})
FIND_PACKAGE(PNG REQUIRED)
target_link_libraries(ray ${PNG_LIBRARIES})
FIND_PACKAGE(ZLIB REQUIRED)
target_link_libraries(ray ${ZLIB_LIBRARIES})
target_link_libraries(ray ${OPENGL_glu_LIBRARY})
